# template

./: README.md  cookiecutter.json
.github/workflows/: sync-upstream.yml
cloud/: registry.json
cloud/alibaba-fc-scheduled/: README.md  handler.py  s.yaml
cloud/azure-container/: README.md  container-app.yaml
cloud/azure-functions/: Dockerfile  README.md  function.json
cloud/cloud-run/: README.md
cloud/cloud-run-scheduled/: README.md  scheduler.yaml
cloud/digital-ocean/: README.md
cloud/docker/: README.md
cloud/ecs/: README.md
cloud/ecs-scheduled/: README.md  template.yaml
cloud/fly-io/: README.md  fly.toml
cloud/heroku/: Procfile  README.md  heroku.yml
cloud/kubernetes/: README.md
cloud/lambda/: README.md  handler.py  samconfig.toml  serverless.yml  template.yaml
cloud/lambda-api-trigger/: Dockerfile  README.md  handler.py  template.yaml
cloud/lambda-s3-trigger/: README.md  handler.py  template.yaml
cloud/lambda-scheduled/: README.md  handler.py  template.yaml
cloud/lambda-sqs-trigger/: README.md  handler.py  template.yaml
cloud/railway/: README.md  railway.json
cloud/render/: README.md
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/: workflow.py
